// Copyright (C) 2023 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License

// This is the schema definition for of Aconfig files. Modifications need to be
// either backwards compatible, or include updates to all Aconfig files in the
// Android tree.

syntax = "proto2";

package android.aconfig;

// messages used in both aconfig input and output

enum flag_state {
  ENABLED = 1;
  DISABLED = 2;
}

enum flag_permission {
  READ_ONLY = 1;
  READ_WRITE = 2;
}

// aconfig input messages: configuration and override data

message flag_value {
  required flag_state state = 1;
  required flag_permission permission = 2;
  optional uint32 since = 3;
}

message flag_definition {
  required string name = 1;
  required string description = 2;
  repeated flag_value value = 3;
};

message namespace {
  required string namespace = 1;
  repeated flag_definition flag = 2;
};

message flag_override {
  required string namespace = 1;
  required string name = 2;
  required flag_state state = 3;
  required flag_permission permission = 4;
};

message flag_overrides {
  repeated flag_override flag_override = 1;
};

// aconfig output messages: parsed and verified configuration and override data

message tracepoint {
  // path to config or override file releative to $TOP
  required string source = 1;
  required flag_state state = 2;
  required flag_permission permission = 3;
}

message parsed_flag {
  required string namespace = 1;
  required string name = 2;
  required string description = 3;
  required flag_state state = 4;
  required flag_permission permission = 5;
  repeated tracepoint trace = 6;
}

message parsed_flags {
  repeated parsed_flag parsed_flag = 1;
}
